<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="#ffffff">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/user_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_login"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="30dp"
                android:textColor="#000000"/>

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/help_user"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="center_horizontal"
                    android:textSize="30dp"
                    />

            <EditText
                    android:id="@+id/password"
                    android:layout_marginTop="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/help_password"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="center_horizontal"
                    android:textSize="30dp"/>

            <Button
                android:id="@+id/ingresar"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/button_ingresar"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:textSize="30dp"
                android:textColor="@color/colorAccent"/>
            <Button
                android:id="@+id/registrar"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/button_registrar"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>