<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="#ffffff"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/user_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_signup"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="30dp"
                android:textColor="#000000"/>

            <EditText
                android:layout_marginTop="20dp"
                android:id="@+id/new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/help_user"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:gravity="center_horizontal"
                android:textSize="30dp"
                />

            <EditText
                android:id="@+id/new_user_password"
                android:layout_marginTop="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/help_password"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:gravity="center_horizontal"
                android:textSize="30dp"/>

            <EditText
                android:id="@+id/passwordCheck"
                android:layout_marginTop="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/help_password_check"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:gravity="center_horizontal"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/registrar"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/registrar"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:textSize="30sp"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>